--- a/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: messages\n"
 "POT-Creation-Date: 2016-05-11 13:04-0600\n"
-"PO-Revision-Date: 2016-05-11 13:13-0600\n"
+"PO-Revision-Date: 2016-05-11 13:55-0600\n"
 "Last-Translator: Paul Poulain <paul.poulain@biblibre.com>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -979,7 +979,7 @@ msgstr "Changer de module"
 
 #: templates/header.php:248
 msgid "Main Menu"
-msgstr "Menu Principal"
+msgstr "Menu principal"
 
 #: templates/header.php:253
 msgid "Licensing"
